--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </div>
     </div>
     <!-- back-to-top -->
-    <div id="backtotop" class="d_none circle">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-arrow-up-circle"
+    <div id="backtotop" class="d_none circle ">
+        <svg class="circlimg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-arrow-up-circle"
             viewBox="0 0 16 16">
             <path fill-rule="evenodd"
                 d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z" />
@@ -660,7 +660,7 @@
                 data-aos-anchor-placement="top-center" class="col-12 col-lg-6 position-relative z-1 ">
                     <div class="position-relative">
                         <img class="w-100 " src="./assets/images/mobil-img.png" alt="phoneimge">
-                        <img class=" relation-img-set" src="./assets/images/relation-img-1.png" alt="">
+                        <img class=" relation-img-set circlimg" src="./assets/images/relation-img-1.png" alt="">
                     </div>
                     <span class="elips-6"></span>
                 </div>
