--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
                 </div>
                 <ul id="navBar" class="d-flex align-items-center gap-5 mb-0 mobileView">
                     <li><a href="#redact"
-                            class="white ff-jakarta fs-sm1 fw-400 text-uppercase letter-s-3 opcity-8 lh-126 home position-relative fw-h nav-line mb-0">REDACT</a>
+                            class="white ff-jakarta fs-sm1 fw-400 text-uppercase letter-s-3 opcity-8 lh-126 home redact position-relative fw-h nav-line mb-0">REDACT</a>
                     </li>
                     <li><a href="#extract"
-                            class="white ff-jakarta fs-sm1 fw-400 text-uppercase letter-s-3 opcity-8 lh-126 home position-relative fw-h nav-line mb-0">EXTRACT</a>
+                            class="white ff-jakarta extract fs-sm1 fw-400 text-uppercase letter-s-3 opcity-8 lh-126 home position-relative fw-h nav-line mb-0">EXTRACT</a>
                     </li>
                     <li><a href="#detect"
-                            class="white ff-jakarta fs-sm1 fw-400 text-uppercase letter-s-3 opcity-8 lh-126 home position-relative fw-h nav-line mb-0">DETECT</a>
+                            class="white ff-jakarta detect fs-sm1 fw-400 text-uppercase letter-s-3 opcity-8 lh-126 home position-relative fw-h nav-line mb-0">DETECT</a>
                     </li>
                     <li><a href="#compare"
-                            class="white ff-jakarta fs-sm1 fw-400 text-uppercase letter-s-3 opcity-8 lh-126 home position-relative fw-h nav-line mb-0">COMPARE</a>
+                            class="white ff-jakarta compare fs-sm1 fw-400 text-uppercase letter-s-3 opcity-8 lh-126 home position-relative fw-h nav-line mb-0">COMPARE</a>
                     </li>
                     <li><a class="common-btn ff-jakarta white fs-md fw-600 text-c ">Try now</a></li>
                 </ul>
@@ -177,7 +177,7 @@
         </div>
     </header>
     <!-- slider-section -->
-    <section class="bg-black1 position-relative">
+    <section class="bg-black1 position-relative" id="redact">
         <div class="container-fluid ">
             <div class=" slider-1 py-md-3 py-2 d-flex align-items-center gap-44">
                 <img class="blent-mode" src="./assets/images/slider-img-1.png" alt="">
@@ -193,7 +193,7 @@
         
     </section>
     <!-- ai-section -->
-    <section class="bg-black1 py-md-3 py-2" >
+    <section class="bg-black1 py-md-3 py-2" id="extract" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-12">
@@ -211,7 +211,7 @@
         </div>
     </section>
     <!-- accordion-section -->
-    <section class="py-md-5 py-4 bg-black1  position-relative z-1 " >
+    <section class="py-md-5 py-4 bg-black1 position-relative z-1 " >
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-12 d-flex flex-column justify-content-center mh-550">
@@ -446,7 +446,7 @@
         <span class="elips-3"></span>
     </section>
     <!-- Testimonials-slider-2 section -->
-    <section class="bg-black1 py-md-5 py-4 overflow-hidden ">
+    <section class="bg-black1 py-md-5 py-4 overflow-hidden " id="detect">
         <div class="container-fluid position-relative z-1">
             <h2 class="m-0 fs-xl fw-medium white ff-jakarta text-center mb-md-5 mb-3">Testimonials</h2>
             <div class="slider-2">
@@ -599,7 +599,7 @@
         </div>
     </section>
     <!--Our Integrations  -->
-    <section class="bg-black1 py-md-5 py-4 position-relative z-1">
+    <section class="bg-black1 py-md-5 py-4 position-relative z-1" id="compare">
         <div class="light-10 position-absolute"></div>
         <div class="container-lg">
             <h3 class="fs-xl fw-medium ff-jakarta lh-126 white text-center m-0">Our Integrations</h3>
