--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <!-- header-section -->
     <header class="header-bg-img position-relative z-1 overflow-hidden">
-        <nav class="py-md-3 py-2 nav-bg">
+        <nav class="py-md-3 py-2 nav-bg backflt">
             <div class="container-fluid d-flex align-items-center justify-content-between">
                 <div class="cursor-pointer"><img src="./assets/images/nav-logo-img.png" alt="#"></div>
                 <div onclick="openNav()" class="menu d-block d-lg-none z-5">
