--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
     </section>
     <!-- ai-section -->
-    <section class="bg-black1 py-md-3 py-2" id="extract">
+    <section class="bg-black1 py-3" id="extract">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-12">
@@ -673,7 +673,7 @@
                 plan best
                 fits for you</p>
             <div class="row justify-content-center">
-                <div class="col-xl-4 col-lg-6 col-12 pb-md-5 pb-3 common-card  position-relative position-line1"
+                <div class="col-xl-4 col-lg-6 col-12 pb-md-5 pb-3 common-card crd-bt1  position-relative position-line1"
                     data-aos="fade-up">
                     <h1 class="fs-lg1 fw-semibold ff-jakarta lh-140 white text-center pt-md-5 pt-3 doler">$0.99</h1>
                     <p class="fs-lg fw-medium ff-jakarta white text-center basic pb-md-5 pb-3 ">7 Days</p>
@@ -732,7 +732,7 @@
                     <div class="text-center pt-md-5 pt-3 "><button class="select-btn fs-md fw-semibold ff-jakarta light-gray1">select</button>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-12  pb-md-5 pb-3 common-card position-relative position-line2 "
+                <div class="col-xl-4 col-lg-6 col-12  pb-md-5 pb-3 common-card crd-bt2 position-relative position-line2 "
                     data-aos="fade-down">
                     <h2 class="fs-lg1 fw-semibold ff-jakarta lh-140 white text-center pt-md-5 pt-3 doler ">$400</h2>
                     <p class="fs-lg fw-medium ff-jakarta white text-center basic pb-md-5 pb-3 ">Business</p>
@@ -794,7 +794,7 @@
                             class="select-btn fs-md fw-semibold ff-jakarta light-gray1">select</button>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-12 pb-md-5 pb-3 common-card  position-relative position-line3"
+                <div class="col-xl-4 col-lg-6 col-12 pb-md-5 pb-3 common-card crd-bt3  position-relative position-line3"
                     data-aos="fade-up">
                     <h3 class="fs-lg1 fw-semibold ff-jakarta lh-140 white text-center pt-md-5 pt-3 doler ">$190</h3>
                     <p class="fs-lg fw-medium ff-jakarta white text-center basic pb-md-5 pb-3 ">Basic</p>
@@ -888,7 +888,7 @@
     <footer class="bg-black1 pt-md-5 pt-3  w-100  ">
         <div class="container-fluid ">
             <div class="row">
-                <div data-aos="fade-up" class="col-12 col-xl-3">
+                <div data-aos="fade-up" class="col-12 col-xl-3 mb-3">
                     <img src="./assets/images/footer-logo-img.png" alt="logo">
                     <p class=" fs-sm fw-normal white opcity-6 mx-209 pt-3 pb-4 ff-jakarta">Any system that works with
                         API can be
@@ -950,9 +950,9 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-xl-9 d-flex justify-content-center   ">
+                <div class="col-12 col-xl-9 d-flex justify-content-xl-center">
                     <div class="row pt-2">
-                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-3  ">
+                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-3 mb-3 mb-md-0  ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white">PRODUCTS</li>
                                 <li class="mb-2"><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h "
@@ -981,7 +981,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-2 ">
+                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-0 ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white">STORE</li>
                                 <li class="mb-2"><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h "
@@ -1000,7 +1000,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-2 ">
+                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-0 ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white mb-2">SUPPORT</li>
                                 <li class="mb-2"><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h"
@@ -1010,7 +1010,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-2 ">
+                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-3 ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white mb-2">COMPANY</li>
                                 <li class="mb-2"><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h"
@@ -1038,7 +1038,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-2 ">
+                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-3 ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white">ENTERPRISE</li>
                                 <li class=""><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h"
@@ -1047,7 +1047,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-1 ">
+                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-1 mb-3 mb-md-3 ">
                             <ul class="ps-0">
                                 <li class=" ff-jakarta mb-2 fs-md fw-medium white">RESOURCES</li>
                                 <li class=" mb-2"><a class=" fs-md fw-normal white opcity-6 ff-jakarta footer-h "
