--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
         </div>
     </section>
     <!-- footer-section -->
-    <footer class="bg-black1 pt-md-5 pt-3  w-100  ">
+    <footer class="bg-black1 pt-md-5 pt-3 w-100 overflow-hidden  ">
         <div class="container-fluid ">
             <div class="row">
                 <div data-aos="fade-up" class="col-12 col-xl-3 mb-3">
@@ -952,7 +952,7 @@
                 </div>
                 <div class="col-12 col-xl-9 d-flex justify-content-xl-center">
                     <div class="row pt-2">
-                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-3 mb-3 mb-md-0  ">
+                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-3 mb-3 mb-md-0 p-0  ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white">PRODUCTS</li>
                                 <li class="mb-2"><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h "
@@ -981,7 +981,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-0 ">
+                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-0 p-0  ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white">STORE</li>
                                 <li class="mb-2"><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h "
@@ -1000,7 +1000,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-0 ">
+                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-0 p-0  ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white mb-2">SUPPORT</li>
                                 <li class="mb-2"><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h"
@@ -1010,7 +1010,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-3 ">
+                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-3 p-0  ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white mb-2">COMPANY</li>
                                 <li class="mb-2"><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h"
@@ -1038,7 +1038,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-3 ">
+                        <div data-aos="fade-down" class="col-6 col-md-4 col-lg-2 mb-3 mb-md-3 p-0  ">
                             <ul class="ps-0">
                                 <li class="ff-jakarta mb-2 fs-md fw-medium white">ENTERPRISE</li>
                                 <li class=""><a class="fs-md fw-normal white opcity-6 ff-jakarta footer-h"
@@ -1047,7 +1047,7 @@
                             </ul>
                         </div>
 
-                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-1 mb-3 mb-md-3 ">
+                        <div data-aos="fade-up" class="col-6 col-md-4 col-lg-1 mb-3 mb-md-3 p-0  ">
                             <ul class="ps-0">
                                 <li class=" ff-jakarta mb-2 fs-md fw-medium white">RESOURCES</li>
                                 <li class=" mb-2"><a class=" fs-md fw-normal white opcity-6 ff-jakarta footer-h "
