--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Primary Meta Tags -->
     <title>iDox.ai </title>
-    <link rel="icon" href="./assets/images/favicon.ico
-    ">
+    <link rel="icon" href="./assets/images/favicon.ico">
     <meta name="title" content="iDox.ai " />
     <meta name="description"
         content="iDox.ai provides the world’s most advanced AI powered redaction solution for organizations to scan and detect within document management systems, folders, and multitude of file sources. " />
@@ -62,8 +61,8 @@
     </div>
     <!-- back-to-top -->
     <div id="backtotop" class="d_none circle ">
-        <svg class="circlimg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-            class="bi bi-arrow-up-circle" viewBox="0 0 16 16">
+        <svg class="circlimg bi bi-arrow-up-circle" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
+             viewBox="0 0 16 16">
             <path fill-rule="evenodd"
                 d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z" />
         </svg>
@@ -675,7 +674,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-4 col-lg-6 col-12 pb-md-5 pb-3 common-card crd-bt1  position-relative position-line1"
                     data-aos="fade-up">
-                    <h1 class="fs-lg1 fw-semibold ff-jakarta lh-140 white text-center pt-md-5 pt-3 doler">$0.99</h1>
+                    <h2 class="fs-lg1 fw-semibold ff-jakarta lh-140 white text-center pt-md-5 pt-3 doler">$0.99</h2>
                     <p class="fs-lg fw-medium ff-jakarta white text-center basic pb-md-5 pb-3 ">7 Days</p>
                     <div class="d-flex justify-content-center pb-4">
                         <div class="d-flex flex-column ">
